[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiaccel"
version = "2.0.0"
description = "A library for accelerating research on AI Bridging Cloud Infrastructure (ABCI)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AIST", email = "onishi-masaki@aist.go.jp"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "optuna>=3.4.0",
    "pandas",
    "pandas-stubs",
    "matplotlib"
]

[project.scripts]

[project.urls]
homepage = "https://github.com/aistairc/aiaccel"
documentation = "https://aiaccel.readthedocs.io"
repository = "https://github.com/aistairc/aiaccel"

[project.optional-dependencies]
dev = [
    "mypy",
    "myst-parser",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-subprocess",
    "ruff",
    "sphinx",
    "sphinxcontrib-jquery",
    "sphinx-intl",
    "sphinx-fontawesome",
    "sphinx-rtd-theme",
    "undecorated"
]
github-actions = [
    "pytest-github-actions-annotate-failures",
]

[tool.ruff]
line-length = 120
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "B", "SIM", "I", "C", "A", "ERA", "N", "C90"]

