[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiaccel"
version = "2.0.0"
description = "A library for accelerating research on AI Bridging Cloud Infrastructure (ABCI)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AIST", email = "onishi-masaki@aist.go.jp"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "omegaconf",
    "colorama",
]
dynamic = ["optional-dependencies"]

[tool.setuptools.packages.find]
exclude = ["build", "typing"]

[project.urls]
homepage = "https://github.com/aistairc/aiaccel"
documentation = "https://aiaccel.readthedocs.io"
repository = "https://github.com/aistairc/aiaccel"

[tool.ruff]
line-length = 120
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "B", "SIM", "I", "C", "A", "ERA", "N", "C90"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

section-order = [
    "future",
    "typing",
    "standard-library",
    "utilities",
    "datascience",
    "torch",
    "torch-third-party",
    "third-party",
    "audio",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.isort.sections]
"typing" = ["typing", "numpy.typing"]
"utilities" = ["colorama", "hydra", "omegaconf", "progressbar", "rich"]
"datascience" = ["numpy", "scipy", "pandas", "matplotlib", "opt_einsum", "einops"]
"torch" = ["torch"]
"torch-third-party" = ["torchaudio", "torchvision", "auraloss", "lightning", "einops.layers"]
"audio" = ["librosa", "pypesq", "pystoi", "soundfile"]
