[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aiaccel"
description = "AIST Toolkit for Accelerating Machine Learning Research"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AIST", email = "onishi-masaki@aist.go.jp"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "attrs",
    "numpy",
    "scipy",
    "optuna>=4.5.0",
    "omegaconf",
    "hydra-core",
    "huggingface-hub",
    "colorama",
    "lightning>=2.2.1",
    "torch>=2.2.0",
    "h5py",
    "rich",
    "tensorboard",
    "typing_extensions",
    "simpleeval"
]
dynamic = ["version"]

[tool.hatch.version]
source = "vcs"

[project.urls]
documentation = "https://aistairc.github.io/aiaccel/"
repository = "https://github.com/aistairc/aiaccel"

[project.optional-dependencies]
dev = [
    "mypy",
    "myst-parser",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-subprocess",
    "pytest-xdist",
    "ruff",
    "sphinx",
    "sphinxcontrib-jquery",
    "sphinx-autobuild",
    "sphinx-intl",
    "sphinx-fontawesome",
    "sphinx-copybutton",
    "shibuya",
    "sphinx_design",
    "types-colorama",
    "types-PyYAML",
    "undecorated",
    "pandas",
    "pandas-stubs",
    "matplotlib",
    "docstrfmt",
    "types-toml",
    "hatch",
]
github-actions = [
    "pytest-github-actions-annotate-failures",
]

[project.scripts]
aiaccel-job = "aiaccel.launcher:main"
aiaccel-config = "aiaccel.launcher:main"
aiaccel-torch = "aiaccel.launcher:main"
aiaccel-hpo = "aiaccel.launcher:main"
aiaccel-workflow = "aiaccel.launcher:main"


# ruff configurations
[tool.ruff]
line-length = 120
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "B", "SIM", "I", "C", "A", "ERA", "N", "C90"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

section-order = [
    "future",
    "typing",
    "standard-library",
    "utilities",
    "datascience",
    "torch",
    "torch-third-party",
    "third-party",
    "audio",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.isort.sections]
"typing" = ["typing", "typing_extensions", "numpy.typing"]
"utilities" = ["colorama", "hydra", "omegaconf", "progressbar", "rich"]
"datascience" = ["numpy", "scipy", "pandas", "matplotlib", "opt_einsum", "einops"]
"torch" = ["torch"]
"torch-third-party" = ["torchaudio", "torchvision", "auraloss", "lightning", "einops.layers"]
"audio" = ["librosa", "pypesq", "pystoi", "soundfile"]


# pixi configurations
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.11"

[tool.pixi.pypi-dependencies]
aiaccel = { path = ".", editable = true }

[tool.pixi.environments]
default = { features = ["dev"] }

[tool.pixi.tasks]
