[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task"
version = "0.1.0"
description = "Package for integration example."
authors = [
    {name = "AIST", email = "onishi-masaki@aist.go.jp"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torchvision"
]

[tool.setuptools]
package-dir = {"" = "task"}
